--- a/delegate-message/app/src/main/res/layout/activity_main.xml
+++ b/delegate-message/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/msg_pixelly"
+        android:textSize="21sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_margin="12dp"/>
@@ -27,9 +28,32 @@
         android:layout_margin="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/download_style_switch"
+        android:text="@string/download_w_intentservice"
+        android:layout_margin="12dp"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <ProgressBar
         android:id="@+id/download_progress_view"
         android:visibility="gone"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/random_number_title_view"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:layout_margin="12dp"
+        android:text="@string/msg_random_number_generator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/general_random_button"
+        android:text="@string/title_generate"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
