--- a/delegate-message/app/src/main/res/layout/activity_main.xml
+++ b/delegate-message/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/msg_pixelly"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_margin="12dp"/>
+    <com.google.android.material.appbar.MaterialToolbar
+        app:title="@string/msg_pixelly"
+        app:titleTextColor="@color/white"
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"/>
     <TextView
         android:id="@+id/download_status_text"
         android:textStyle="italic"
@@ -31,6 +29,14 @@
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/download_style_switch"
         android:text="@string/download_w_intentservice"
+        android:layout_margin="12dp"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/job_scheduler_style_switch"
+        android:text="@string/download_w_jobscheduler"
         android:layout_margin="12dp"
         android:textStyle="bold"
         android:textSize="15sp"
@@ -55,5 +61,17 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/general_job_result_button"
+        android:text="@string/title_check_scheduled_job_result"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/scheduled_job_result_view"
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
